--- a/ci/import/docker-compose.yml
+++ b/ci/import/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       DATAPUNT_API_URL: ${DATAPUNT_API_URL:-https://api.datapunt.amsterdam.nl/}
 
     command: >
-      bash -c "/app/ci/import/docker-wait.sh \
+      bash -c "/app/ci/docker-wait.sh \
               && python ../../manage.py migrate \
               && export DJANGO_SETTINGS_MODULE=monumenten.settings && python ../../manage.py run_import"
 
