--- a/web/.jenkins/import/docker-compose.yml
+++ b/web/.jenkins/import/docker-compose.yml
@@ -20,9 +20,9 @@ services:
       DATAPUNT_API_URL: ${DATAPUNT_API_URL:-https://api.datapunt.amsterdam.nl/}
 
     command: >
-      bash -c "/app/ci/docker-wait.sh \
+      bash -c "../docker-wait.sh \
               && python ../../manage.py migrate \
-              && export DJANGO_SETTINGS_MODULE=monumenten.settings && python ../../manage.py run_import"
+              && python ../../manage.py run_import"
 
   db-backup:
     image: build.datapunt.amsterdam.nl:5000/atlas/postgres
