--- a/web/.jenkins-import/docker-compose.yml
+++ b/web/.jenkins-import/docker-compose.yml
@@ -21,8 +21,8 @@ services:
 
     command: >
       bash -c "./docker-wait.sh \
-              && python ../manage.py migrate \
-              && python ../manage.py run_import"
+              && python manage.py migrate \
+              && python manage.py run_import"
 
   db-backup:
     image: build.datapunt.amsterdam.nl:5000/atlas/postgres
