--- a/web/.jenkins-import/docker-compose.yml
+++ b/web/.jenkins-import/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       DATAPUNT_API_URL: ${DATAPUNT_API_URL:-https://api.datapunt.amsterdam.nl/}
 
     command: >
-      bash -c "./docker-wait.sh \
+      bash -c ".jenkins-import/docker-wait.sh \
               && python manage.py migrate \
               && python manage.py run_import"
 
