--- a/web/.jenkins/import/docker-compose.yml
+++ b/web/.jenkins/import/docker-compose.yml
@@ -20,9 +20,9 @@ services:
       DATAPUNT_API_URL: ${DATAPUNT_API_URL:-https://api.datapunt.amsterdam.nl/}
 
     command: >
-      bash -c "../docker-wait.sh \
-              && python ../../manage.py migrate \
-              && python ../../manage.py run_import"
+      bash -c ".jenkins/docker-wait.sh \
+              && python manage.py migrate \
+              && python manage.py run_import"
 
   db-backup:
     image: build.datapunt.amsterdam.nl:5000/atlas/postgres
