--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -5,8 +5,8 @@ ENV PYTHONUNBUFFERED 1
 ENV CONSUL_HOST=${CONSUL_HOST:-notset}
 ENV CONSUL_PORT=${CONSUL_PORT:-8500}
 ENV DATAPUNT_API_URL=${DATAPUNT_API_URL:-https://api.datapunt.amsterdam.nl/}
-ARG OBJECTSTORE_PASSWORD
-ENV OBJECTSTORE_PASSWORD=$OBJECTSTORE_PASSWORD
+ARG CULTUUR_OBJECTSTORE_PASSWORD
+ENV CULTUUR_OBJECTSTORE_PASSWORD=$CULTUUR_OBJECTSTORE_PASSWORD
 
 EXPOSE 8000
 
