--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -26,8 +26,9 @@ WORKDIR /app
 
 COPY . /app/
 
-# see .jenkins/README.TXT
-COPY .jenkins-import /.jenkins-import/
+# CI hook - see .jenkins/README.TXT
+COPY .jenkins/import /.jenkins-import/
+COPY .jenkins/docker-migrate.sh /app/web/
 
 RUN pip install --no-cache-dir -r requirements.txt
 USER datapunt
