--- a/src/.jenkins/test/flake.cfg
+++ b/src/.jenkins/test/flake.cfg
@@ -1,6 +1,5 @@
 [flake8]
-ignore=E501,E225,E261,W391,E241,E203,W292,W391
-ignore=E501
+ignore=E501,E225,E261,W391,E241,E203,W292,W391,E501
 exclude=.git,
         .cfg,
         .ini,
