--- a/src/.jenkins/test/docker-compose.yml
+++ b/src/.jenkins/test/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       DATABASE_NAME: monumenten
       DATABASE_USER: monumenten
       DATABASE_PASSWORD: insecure
+      JWT_SHARED_SECRET_KEY: insecure
     command: >
       bash -c "/app/.jenkins/docker-wait.sh \
               && cd /app/.jenkins/test/ \
