--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     links:
       - database
     environment:
-      - DATAPUNT_API_URL=${DATAPUNT_API_URL:-https://api.datapunt.amsterdam.nl/}
+      - DATAPUNT_API_URL=${DATAPUNT_API_URL:-https://api.data.amsterdam.nl/}
       - SECRET_KEY=hoi
       - DATABASE_NAME=monumenten
       - DATABASE_USER=monumenten
