--- a/src/.jenkins/import/docker-compose.yml
+++ b/src/.jenkins/import/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       DATABASE_PASSWORD: insecure
       DATABASE_HOST_OVERRIDE: database
       DATABASE_PORT_OVERRIDE: 5432
-      DATAPUNT_API_URL: ${DATAPUNT_API_URL:-https://api.datapunt.amsterdam.nl/}
+      DATAPUNT_API_URL: ${DATAPUNT_API_URL:-https://api.data.amsterdam.nl/}
 
     command: >
       bash -c "/app/.jenkins/docker-wait.sh \
