--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER datapunt.ois@amsterdam.nl
 ENV PYTHONUNBUFFERED 1
 ENV CONSUL_HOST=${CONSUL_HOST:-notset}
 ENV CONSUL_PORT=${CONSUL_PORT:-8500}
-ENV DATAPUNT_API_URL=${DATAPUNT_API_URL:-https://api.datapunt.amsterdam.nl/}
+ENV DATAPUNT_API_URL=${DATAPUNT_API_URL:-https://api.data.amsterdam.nl/}
 ARG CULTUUR_OBJECTSTORE_PASSWORD
 ENV CULTUUR_OBJECTSTORE_PASSWORD=$CULTUUR_OBJECTSTORE_PASSWORD
 ENV JWT_SHARED_SECRET_KEY=${JWT_SHARED_SECRET_KEY}
