--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -20,6 +20,8 @@ django-filter==1.0.2
 django==1.11              # via datapunt-authorization-django
 djangorestframework-gis==0.10.1
 djangorestframework==3.6.2
+django-rest-swagger==2.1.0
+drf-extensions==0.3.1
 factory-boy==2.7.0
 fake-factory==0.7.2
 flake8==3.3.0
