--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -15,6 +15,7 @@ datapunt-authorization-levels==0.1.0
 dateutils==0.6.6
 debtcollector==1.13.0
 django-braces==1.10.0
+django-debug-toolbar==1.7
 django-extensions==1.7.4
 django-filter==1.0.2
 django==1.11              # via datapunt-authorization-django
