--- a/src/.jenkins/import/docker-compose.yml
+++ b/src/.jenkins/import/docker-compose.yml
@@ -22,7 +22,8 @@ services:
     command: >
       bash -c "/app/.jenkins/docker-wait.sh \
               && python manage.py migrate \
-              && python manage.py run_import"
+              && python manage.py run_import \
+              && python manage.py run_bag_key_conversions"
 
   db-backup:
     image: build.datapunt.amsterdam.nl:5000/atlas/postgres
