--- a/src/.jenkins/import/docker-compose.yml
+++ b/src/.jenkins/import/docker-compose.yml
@@ -23,7 +23,8 @@ services:
       bash -c "/app/.jenkins/docker-wait.sh \
               && python manage.py migrate \
               && python manage.py run_import \
-              && python manage.py run_bag_key_conversions"
+              && python manage.py run_bag_key_conversions\
+              && python manage.py run_refresh_materialized_views"
 
   db-backup:
     image: build.datapunt.amsterdam.nl:5000/atlas/postgres
