--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -21,13 +21,15 @@ RUN apt-get install -y \
 
 WORKDIR /app
 
-COPY . /app/
 
 # CI hook - see .jenkins/README.TXT
 COPY .jenkins/import /.jenkins-import/
 COPY .jenkins/docker-migrate.sh /app/
 
+COPY requirements.txt /app/
 RUN pip install --no-cache-dir -r requirements.txt
+COPY . /app/
+
 USER datapunt
 
 RUN export DJANGO_SETTINGS_MODULE=monumenten.settings
