Taiga 1317 - Add monumenten search/autosuggest
Squashed commit of the following:

commit fc08135dd1cfc5653b2262d09798d7b0c338d000
Author: Bart Heupers <bart.heupers@gmail.com>
Date:   Thu Nov 2 12:41:07 2017 +0100

    Add Elastic Search - Add Unit tests for ES

commit 0fa0e1e79056e4a1d4763aa7731cfde50ee17688
Author: Bart Heupers <bart.heupers@gmail.com>
Date:   Wed Nov 1 13:21:58 2017 +0100

    Elastic Search : Fix test if index does not exist

commit 95e54696df809ca34e264f75a33a996c20121293
Author: Bart Heupers <bart.heupers@gmail.com>
Date:   Wed Nov 1 13:10:20 2017 +0100

    Elastic Search : Fix test if index does not exist

commit 458c6cf8189330dcadc52382e9358461cb8082ec
Author: Bart Heupers <bart.heupers@gmail.com>
Date:   Tue Oct 31 16:35:03 2017 +0100

    Elastic Search : Add Elastic Search docker to jenkins test - better elastic docker for testing

commit c3508fc1c8d9697f5ef24e559cfdc5390eee4715
Author: Bart Heupers <bart.heupers@gmail.com>
Date:   Tue Oct 31 15:26:39 2017 +0100

    Elastic Search : Add Elastic Search docker to jenkins test - better wait for ElasticSearch

commit c29ae4f5602639e1f4739d66ca0d205d95d63468
Author: Bart Heupers <bart.heupers@gmail.com>
Date:   Tue Oct 31 13:35:18 2017 +0100

    Elastic Search : Add Elastic Search docker to jenkins test - wait for ElasticSearch

commit adbd88af0ec409705f57802a2bddd76be79a5226
Author: Bart Heupers <bart.heupers@gmail.com>
Date:   Tue Oct 31 13:23:41 2017 +0100

    Elastic Search : Add Elastic Search docker to jenkins test - also to links

commit 918554b6b63bfc607b6980fcba8da7cb7017c3f6
Author: Bart Heupers <bart.heupers@gmail.com>
Date:   Tue Oct 31 13:09:19 2017 +0100

    Elastic Search : Add Elastic Search docker to jenkins test

commit 7079852803ecf988815867609545a86cba2e29fe
Author: Bart Heupers <bart.heupers@gmail.com>
Date:   Tue Oct 31 12:52:52 2017 +0100

    Elastic Search : also make swagger parameters work

commit 717411d2524b1c8d15abfebd911aeb842d236e94
Author: Bart Heupers <ba

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,14 @@ services:
       POSTGRES_USER: monumenten
       POSTGRES_PASSWORD: insecure
 
+  elasticsearch:
+    image: build.datapunt.amsterdam.nl:5000/atlas/elasticsearch5:latest
+    # build: elasticsearch5
+    command:  elasticsearch -Ehttp.host=0.0.0.0 -Etransport.host=127.0.0.1
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+
   web:
     build: src/
     ports:
