--- a/src/.jenkins/import/docker-compose.yml
+++ b/src/.jenkins/import/docker-compose.yml
@@ -6,10 +6,18 @@ services:
       POSTGRES_PASSWORD: insecure
       POSTGRES_USER: monumenten
 
+  elasticsearch:
+    image: build.datapunt.amsterdam.nl:5000/atlas/elasticsearch5
+    volumes:
+      - ./backups/elasticsearch:/tmp/backups
+    user: root
+    command: elasticsearch -Ehttp.host=0.0.0.0 -Etransport.host=127.0.0.1 -Epath.repo=/tmp
+
   importer:
     image: build.datapunt.amsterdam.nl:5000/datapunt/monumenten:${ENVIRONMENT}
     links:
       - database
+      - elasticsearch
     environment:
       CULTUUR_OBJECTSTORE_PASSWORD: ${CULTUUR_OBJECTSTORE_PASSWORD}
       DATABASE_NAME: monumenten
