--- a/src/.jenkins/test/docker-compose.yml
+++ b/src/.jenkins/test/docker-compose.yml
@@ -7,9 +7,14 @@ services:
       POSTGRES_USER: monumenten
       POSTGRES_PASSWORD: insecure
 
+  elasticsearch:
+    image: build.datapunt.amsterdam.nl:5000/atlas/elasticsearch5:latest
+    command:  elasticsearch -Ehttp.host=0.0.0.0 -Etransport.host=127.0.0.1
+
   tests:
     build: ../../
     links:
+      - elasticsearch
       - database
     environment:
       DATABASE_NAME: monumenten
