--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -23,6 +23,8 @@ djangorestframework-gis==0.10.1
 djangorestframework==3.6.2
 django-rest-swagger==2.1.0
 drf-extensions==0.3.1
+elasticsearch==5.4.0
+elasticsearch-dsl==5.3.0
 factory-boy==2.7.0
 fake-factory==0.7.2
 flake8==3.3.0
