--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,12 @@ services:
       POSTGRES_DB: monumenten
       POSTGRES_USER: monumenten
       POSTGRES_PASSWORD: insecure
+      LOCAL: "True"
+    volumes:
+      - "~/.ssh/datapunt.key:/root/.ssh/datapunt.key"
 
   elasticsearch:
     image: build.datapunt.amsterdam.nl:5000/atlas/elasticsearch5:latest
-    # build: elasticsearch5
     command:  elasticsearch -Ehttp.host=0.0.0.0 -Etransport.host=127.0.0.1
     ports:
       - "9200:9200"
