--- a/src/.jenkins/import/docker-compose.yml
+++ b/src/.jenkins/import/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       bash -c "/app/.jenkins/docker-wait.sh \
               && python manage.py migrate \
               && python manage.py run_import \
+              && python manage.py run_add_missing_pand \
               && python manage.py run_bag_key_conversions\
               && python manage.py run_import_validation\
               && python manage.py run_refresh_materialized_views"
