BAS-740 Use Docker Hub

--- a/src/.jenkins/import/docker-compose.yml
+++ b/src/.jenkins/import/docker-compose.yml
@@ -1,13 +1,13 @@
 version: "3.0"
 services:
   database:
-    image: build.datapunt.amsterdam.nl:5000/atlas/postgres
+    image: amsterdam/postgres
     environment:
       POSTGRES_PASSWORD: insecure
       POSTGRES_USER: monumenten
 
   elasticsearch:
-    image: build.datapunt.amsterdam.nl:5000/atlas/elasticsearch5:latest
+    image: amsterdam/elasticsearch5
     command:  elasticsearch -Ehttp.host=0.0.0.0 -Etransport.host=127.0.0.1
     user: root
     volumes:
@@ -36,7 +36,7 @@ services:
               && python manage.py run_refresh_materialized_views"
 
   db-backup:
-    image: build.datapunt.amsterdam.nl:5000/atlas/postgres
+    image: amsterdam/postgres
     links:
       - database:db
     volumes:
@@ -55,7 +55,7 @@ services:
                           monumenten > /tmp/backups/database.dump"
 
   el-backup:
-    image: build.datapunt.amsterdam.nl:5000/atlas/elasticsearch5
+    image: amsterdam/elasticsearch5
     volumes:
       - ./backups/elasticsearch:/tmp/backups
     user: root
