--- a/src/.jenkins/test/docker-compose.yml
+++ b/src/.jenkins/test/docker-compose.yml
@@ -1,14 +1,14 @@
 version: "3.0"
 services:
   database:
-    image: build.datapunt.amsterdam.nl:5000/atlas/postgres
+    image: amsterdam/postgres
     environment:
       POSTGRES_DB: monumenten
       POSTGRES_USER: monumenten
       POSTGRES_PASSWORD: insecure
 
   elasticsearch:
-    image: build.datapunt.amsterdam.nl:5000/atlas/elasticsearch5:latest
+    image: amsterdam/elasticsearch5
     command:  elasticsearch -Ehttp.host=0.0.0.0 -Etransport.host=127.0.0.1
 
   tests:
