--- a/src/.jenkins/test/flake.cfg
+++ b/src/.jenkins/test/flake.cfg
@@ -1,5 +1,5 @@
 [flake8]
-ignore=E501,E225,E261,W391,E241,E203,W292,W391,E501,N802
+ignore=E501,E225,E261,W391,E241,E203,W292,W391,E501,N802,C901
 exclude=.git,
         .cfg,
         .ini,
