--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -28,8 +28,8 @@ factory-boy==2.10.0
 Faker==0.8.10
 first==2.0.1
 flake8==3.5.0
-gevent==1.2.2
-greenlet==0.4.12
+gevent==1.3.7
+greenlet==0.4.14
 grequests==0.3.0
 idna==2.6
 ipaddress==1.0.19
@@ -67,6 +67,7 @@ pytz==2017.3
 PyYAML==3.12
 requests==2.18.4
 rfc3986==1.1.0
+sentry-sdk==0.6.4
 simplejson==3.13.2
 six==1.11.0
 sqlparse==0.2.4
