Security update - Update requirements to latest versions

--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,80 +1,80 @@
 asn1crypto==0.24.0
-Babel==2.5.3
-certifi==2017.11.5
-cffi==1.11.4
+Babel==2.6.0
+certifi==2018.11.29
+cffi==1.11.5
 chardet==3.0.4
-click==6.7
+click==7.0
 coreapi==2.3.3
 coreschema==0.0.4
-coverage==4.4.2
-cryptography==2.3
-datapunt-authorization-django==0.2.23
+coverage==4.5.2
+cryptography==2.4.2
+datapunt-authorization-django==0.2.24
 datapunt-authorization-levels==0.1.3
 dateutils==0.6.6
-debtcollector==1.19.0
-Django==2.0.8
-django-braces==1.12.0
-django-debug-toolbar==1.9.1
-django-extensions==1.9.9
-django-filter==1.1.0
+debtcollector==1.20.0
+Django==2.1.5
+django-braces==1.13.0
+django-debug-toolbar==1.11
+django-extensions==2.1.4
+django-filter==2.0.0
 django-filters==0.2.1
-django-rest-swagger==2.1.2
-djangorestframework==3.7.7
-djangorestframework-gis==0.12
-drf-extensions==0.3.1
-elasticsearch==6.1.1
-elasticsearch-dsl==6.1.0
-factory-boy==2.10.0
-Faker==0.8.10
+django-rest-swagger==2.2.0
+djangorestframework==3.9.0
+djangorestframework-gis==0.14
+drf-extensions==0.4.0
+elasticsearch==6.3.1
+elasticsearch-dsl==6.3.1
+factory-boy==2.11.1
+Faker==1.0.1
 first==2.0.1
-flake8==3.5.0
-gevent==1.3.7
-greenlet==0.4.14
+flake8==3.6.0
+gevent==1.4.0
+greenlet==0.4.15
 grequests==0.3.0
-idna==2.6
-ipaddress==1.0.19
+idna==2.8
+ipaddress==1.0.22
 iso8601==0.1.12
 itypes==1.1.0
 Jinja2==2.10
-keystoneauth1==3.3.0
-Markdown==2.6.11
-MarkupSafe==1.0
+keystoneauth1==3.11.2
+Markdown==3.0.1
+MarkupSafe==1.1.0
 mccabe==0.6.1
-monotonic==1.4
-msgpack-python==0.5.1
+monotonic==1.5
+msgpack-python==0.5.6
 netaddr==0.7.19
-netifaces==0.10.6
+netifaces==0.10.9
 openapi-codec==1.3.2
-oslo.config==5.2.0
-oslo.i18n==3.19.0
-oslo.serialization==2.23.0
-oslo.utils==3.35.0
-packaging==16.8
-pbr==3.1.1
+oslo.config==6.7.0
+oslo.i18n==3.23.0
+oslo.serialization==2.28.1
+oslo.utils==3.40.0
+packaging==18.0
+pbr==5.1.1
 pip-review==1.0
-pip-tools==1.11.0
+pip-tools==3.2.0
 positional==1.2.1
-psycopg2==2.7.3.2
-pycodestyle==2.3.1
-pycparser==2.18
-pyflakes==1.6.0
-PyJWT==1.5.3
-pyparsing==2.2.0
-python-dateutil==2.6.1
-python-keystoneclient==3.14.0
-python-swiftclient==3.4.0
-pytz==2017.3
-PyYAML==3.12
-requests==2.20.0
-rfc3986==1.1.0
-sentry-sdk==0.6.4
-simplejson==3.13.2
-six==1.11.0
+psycopg2-binary==2.7.6.1
+pycodestyle==2.4.0
+pycparser==2.19
+pyflakes==2.0.0
+PyJWT==1.7.1
+pyparsing==2.3.1
+python-dateutil==2.7.5
+python-keystoneclient==3.18.0
+python-swiftclient==3.6.0
+pytz==2018.9
+PyYAML==4.2b4
+requests==2.21.0
+rfc3986==1.2.0
+sentry-sdk==0.6.6
+simplejson==3.16.0
+six==1.12.0
 sqlparse==0.2.4
-stevedore==1.28.0
-text-unidecode==1.1
-typing==3.6.2
+stevedore==1.30.0
+text-unidecode==1.2
+typing==3.6.6
 uritemplate==3.0.0
-urllib3==1.23
-wrapt==1.10.11
+urllib3==1.24.1
+wrapt==1.11.0
 xmltodict==0.11.0
