--- a/src/.jenkins/import/docker-compose.yml
+++ b/src/.jenkins/import/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.0"
 services:
   database:
-    image: amsterdam/postgres
+    image: amsterdam/postgres11
     environment:
       POSTGRES_PASSWORD: insecure
       POSTGRES_USER: monumenten
@@ -16,7 +16,7 @@ services:
       - ./backups/elasticsearch:/tmp/backups
 
   importer:
-    image: build.datapunt.amsterdam.nl:5000/datapunt/monumenten:${ENVIRONMENT}
+    image: repo.data.amsterdam.nl/datapunt/monumenten:${ENVIRONMENT}
     links:
       - database
       - elasticsearch
