--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -8,7 +8,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 coverage==4.5.2
 cryptography==2.4.2
-datapunt-authorization-django==git://github.com/Amsterdam/authorization_django.git@dce62ac7a6ff282e495315bf7df332bcff4ba307#egg=authorization_django
+git+https://github.com/Amsterdam/authorization_django.git@dce62ac7a6ff282e495315bf7df332bcff4ba307#egg=datapunt-authorization-django
 datapunt-authorization-levels==0.1.3
 dateutils==0.6.6
 debtcollector==1.20.0
