--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,80 +1,80 @@
-asn1crypto==0.24.0
-Babel==2.6.0
-certifi==2018.11.29
-cffi==1.11.5
+asn1crypto==1.3.0
+Babel==2.8.0
+certifi==2019.11.28
+cffi==1.13.2
 chardet==3.0.4
 click==7.0
 coreapi==2.3.3
 coreschema==0.0.4
-coverage==4.5.2
-cryptography==2.4.2
+coverage==5.0.3
+cryptography==2.8
 datapunt-authorization-django==0.3.1
 datapunt-authorization-levels==0.1.3
-dateutils==0.6.6
-debtcollector==1.20.0
-Django==2.1.11
-django-braces==1.13.0
+dateutils==0.6.7
+debtcollector==1.22.0
+Django==2.2.9
+django-braces==1.14.0
 django-debug-toolbar==1.11
-django-extensions==2.1.4
+django-extensions==2.2.6
 django-filter==2.0.0
 django-filters==0.2.1
 django-rest-swagger==2.2.0
-djangorestframework==3.9.1
-djangorestframework-gis==0.14
-drf-extensions==0.4.0
-elasticsearch==6.3.1
-elasticsearch-dsl==6.3.1
-factory-boy==2.11.1
-Faker==1.0.1
-first==2.0.1
-flake8==3.6.0
+djangorestframework==3.11.0
+djangorestframework-gis==0.15
+drf-extensions==0.5.0
+elasticsearch==6.4.0
+elasticsearch-dsl==6.4.0
+factory-boy==2.12.0
+Faker==3.0.1
+first==2.0.2
+flake8==3.7.9
 gevent==1.4.0
 greenlet==0.4.15
-grequests==0.3.0
+grequests==0.4.0
 idna==2.8
-ipaddress==1.0.22
+ipaddress==1.0.23
 iso8601==0.1.12
 itypes==1.1.0
-Jinja2==2.10.1
-keystoneauth1==3.11.2
-Markdown==3.0.1
-MarkupSafe==1.1.0
+Jinja2==2.10.3
+keystoneauth1==3.18.0
+Markdown==3.1.1
+MarkupSafe==1.1.1
 mccabe==0.6.1
 monotonic==1.5
 msgpack-python==0.5.6
 netaddr==0.7.19
 netifaces==0.10.9
 openapi-codec==1.3.2
-oslo.config==6.7.0
-oslo.i18n==3.23.0
-oslo.serialization==2.28.1
-oslo.utils==3.40.0
-packaging==18.0
-pbr==5.1.1
+oslo.config==7.0.0
+oslo.i18n==3.25.1
+oslo.serialization==2.29.2
+oslo.utils==3.42.1
+packaging==20.0
+pbr==5.4.4
 pip-review==1.0
-pip-tools==3.2.0
+pip-tools==4.4.0
 positional==1.2.1
-psycopg2-binary==2.7.6.1
-pycodestyle==2.4.0
+psycopg2-binary==2.8.4
+pycodestyle==2.5.0
 pycparser==2.19
-pyflakes==2.0.0
+pyflakes==2.1.1
 PyJWT==1.7.1
-pyparsing==2.3.1
-python-dateutil==2.7.5
-python-keystoneclient==3.18.0
-python-swiftclient==3.6.0
-pytz==2018.9
-PyYAML==4.2b4
-requests==2.21.0
-rfc3986==1.2.0
-sentry-sdk==0.6.6
-simplejson==3.16.0
-six==1.12.0
-sqlparse==0.2.4
-stevedore==1.30.0
-text-unidecode==1.2
-typing==3.6.6
-uritemplate==3.0.0
-urllib3==1.24.2
-wrapt==1.11.0
-xmltodict==0.11.0
+pyparsing==2.4.6
+python-dateutil==2.8.1
+python-keystoneclient==3.22.0
+python-swiftclient==3.8.1
+pytz==2019.3
+PyYAML==5.3
+requests==2.22.0
+rfc3986==1.3.2
+sentry-sdk==0.14.1
+simplejson==3.17.0
+six==1.14.0
+sqlparse==0.3.0
+stevedore==1.31.0
+text-unidecode==1.3
+typing==3.7.4.1
+uritemplate==3.0.1
+urllib3==1.25.8
+wrapt==1.11.2
+xmltodict==0.12.0
