--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,5 +34,6 @@ services:
       - DATABASE_PASSWORD=insecure
       - UWSGI_HTTP=0.0.0.0:8000
       - UWSGI_MODULE=monumenten.wsgi
+      - UWSGI_STATIC_MAP=/monumenten/static=/static
       - UWSGI_CALLABLE=application
       - UWSGI_MASTER=1
