--- a/src/.jenkins/test/docker-compose.yml
+++ b/src/.jenkins/test/docker-compose.yml
@@ -20,7 +20,6 @@ services:
       DATABASE_NAME: monumenten
       DATABASE_USER: monumenten
       DATABASE_PASSWORD: insecure
+      PLATFORM: docker
     command: >
-      bash -c "/app/.jenkins/docker-wait.sh \
-              && cd /app/.jenkins/test/ \
-              && ./docker-test.sh"
+      bash -c "/app/.jenkins/docker-wait.sh && cd /app/.jenkins/test/ && ./docker-test.sh"
