--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,4 +1,4 @@
-FROM amsterdam/python
+FROM amsterdam/python:3.9-buster
 MAINTAINER datapunt@amsterdam.nl
 
 ENV PYTHONUNBUFFERED 1
@@ -11,10 +11,6 @@ ENV CULTUUR_OBJECTSTORE_PASSWORD=$CULTUUR_OBJECTSTORE_PASSWORD
 EXPOSE 8000
 
 WORKDIR /app
-
-# CI hook - see .jenkins/README.TXT
-COPY .jenkins /.jenkins
-COPY .jenkins/docker-migrate.sh /app/
 
 COPY requirements.txt /app/
 RUN pip install --no-cache-dir -r requirements.txt
