--- a/src/.jenkins/test/docker-compose.yml
+++ b/src/.jenkins/test/docker-compose.yml
@@ -21,5 +21,4 @@ services:
       DATABASE_USER: monumenten
       DATABASE_PASSWORD: insecure
       PLATFORM: docker
-    command: >
-      bash -c "/app/.jenkins/docker-wait.sh && cd /app/.jenkins/test/ && ./docker-test.sh"
+    command: sh -c "/app/.jenkins/docker-wait.sh && cd /app/.jenkins/test/ && ./docker-test.sh"
