make debug independent of secret key

--- a/src/.jenkins/import/docker-compose.yml
+++ b/src/.jenkins/import/docker-compose.yml
@@ -27,5 +27,6 @@ services:
       DATABASE_USER: monumenten
       DATABASE_PASSWORD: insecure
       DATAPUNT_API_URL: ${DATAPUNT_API_URL:-https://api.data.amsterdam.nl/}
+      SECRET_KEY: insecure
     command: >
       bash -c "/.jenkins/import/docker-import-db.sh"
