set required env temporarily for man cmd

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -25,6 +25,9 @@ RUN mkdir -p /static && chown datapunt /static
 USER datapunt
 
 RUN export DJANGO_SETTINGS_MODULE=monumenten.settings
+
+ENV SECRET_KEY=insecure
 RUN ./manage.py collectstatic
+ENV SECRET_KEY=
 
 CMD uwsgi
