--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,4 +1,4 @@
-coverage==7.2.7
+coverage~=7.2.7
 datapunt-authorization-django==0.3.1
 datapunt-authorization-levels==0.1.3
 Django==2.2.28
@@ -13,8 +13,8 @@ drf-extensions==0.5.0
 elasticsearch==6.4.0
 elasticsearch-dsl==6.4.0
 factory-boy==2.12.0
-flake8==6.0.0
-gevent==23.9.1
+flake8~=6.1.0
+gevent~=23.9.1
 grequests==0.6.0
 pip-review==1.3.0
 pip-tools==6.13.0
@@ -22,8 +22,8 @@ psycopg2-binary==2.8.6
 PyJWT==2.7.0
 python-swiftclient==4.3.0
 python-keystoneclient==5.1.0
-requests==2.31.0
+requests~=2.31.0
 sentry-sdk==1.22.2
-urllib3==1.26.17
+urllib3~=1.26.18
 xmltodict==0.13.0
 azure-identity==1.14.0
